ParamSpec: fix argument marshalling

We need to treat GParamSpec and derived classes as gjs_param,
otherwise we fallback on gjs_fundamental and crash.

https://bugzilla.gnome.org/show_bug.cgi?id=725282